kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projeto_vivo-service
spec:
  selector:
    app: projeto_vivo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
