kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projeto_vivo-ingress
spec:
  rules:
    - host: projeto_vivo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projeto_vivo-service
                port:
                  number: 80
